--- a/www/index.html
+++ b/www/index.html
@@ -56,23 +56,36 @@
              for(let i=0; i<results.length; i++){
                   msg += results[i].get(key) + "<br>"; }
                    $("#display").removeClass();
-                    $("#display").addClass("text-light");
-                    $("#display").addClass("bg-primary");
-                     $("#display").html(msg); }) .catch(function(error){
-                          $("#display").removeClass();
-                           $("#display").addClass("bg-warning");
-                            $("#display").html("delete fail:" + JSON.stringify(error)); 
-                            })
-        }
-
-        function countData() {
-            $("#display").html("count does not work");
+                   $("#display").addClass("text-light");
+                   $("#display").addClass("bg-primary");
+                   $("#display").html(msg); })
+                   .catch(function(error){
+                   $("#display").removeClass();
+                   $("#display").addClass("bg-warning");
+                   $("#display").html("delete fail:" + JSON.stringify(error)); 
+            })
         }
 
         function deleteData() {
-            $("#display").html("delete does not work");
+            UTdata.fetch()
+            .then(function(results){
+             return results.delete();
+            })
+            .then(function(results){
+            $("#display").removeClass();
+            $("#display").addClass("bg-success");    
+            $("#display").html("delete success");  
+            })
+            .catch(function(error){
+            $("#display").removeClass();
+            $("#display").addClass("bg-warning");
+            $("#display").html("delete fail:" + JSON.stringify(error));
+            })
         }
+        
+        function countData() {
 
+        }
         function updateData() {
             $("#display").html("update does not work");
         }
